add fontawesome support

--- a/index.html
+++ b/index.html
@@ -2,15 +2,23 @@
 <html>
 <head>
   <title>CharSheet</title>
+  <link rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" 
+  integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" 
+  crossorigin="anonymous"> <!--import fontawesome-->
 </head>
 <body>
 
   <div class="sheet-container">
   
-    <div class="character-name">{{characterName}}</div>
+    <div class="character-name">
+        <i class="fab fa-d-and-d"></i>
+      &nbsp;{{characterName}}</div>
     <div class="top-container">
-      <div class="character-image" @click="healDamage(1)"></div>
-      <div class="character-image" @click="takeDamage(1)"></div>
+      <div class="character-image" @click="healDamage(1)">
+      </div>
+      <div class="character-image" @click="takeDamage(1)">
+      </div>
 
       <div class="main-stats">
         <div class="main-bars">
