add favicon and test border images

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="shortcut icon" href="GoldLogo.png" type="image/x-icon">
+  <link rel="icon" href="GoldLogo.png" type="image/x-icon">
   <title>CharSheet</title>
   <link rel="stylesheet"
   href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" 
@@ -215,6 +217,8 @@
     min-width: 125px;
     background-color: #5f5f5f;
     border: 3px double whitesmoke;
+    /* border-image-source: url(test-border.png);
+    border-image-slice: 200;  */
   }
 
   .bar {
