--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <div class="sheet-container">
-  
+
     <div class="character-name">{{characterName}}<br/>Level:&nbsp;{{level}}</div>
 
     <div class="top-container">
@@ -26,32 +26,32 @@
 
         <div class="main-stats">
 
-          <div class="strength stat bar">
+          <div class="strength stat bar":style="maxStr">
             <div class="current-stat" :style="strSize">
               <span class="bar-text">Strength&nbsp;<b>{{strength}}</b></span>
             </div>
           </div>
-          <div class="dexterity stat bar">
+          <div class="dexterity stat bar" :style="maxDex">
             <div class="current-stat" :style="dexSize">
               <span class="bar-text">Dexterity&nbsp;<b>{{dexterity}}</b></span>
             </div>
           </div>
-          <div class="constitution stat bar">
+          <div class="constitution stat bar" :style="maxCon">
             <div class="current-stat" :style="conSize">
               <span class="bar-text">Constitution&nbsp;<b>{{constitution}}</b></span>
             </div>
           </div>
-          <div class="intelligence stat bar">
+          <div class="intelligence stat bar" :style="maxInt">
             <div class="current-stat" :style="intSize">
               <span class="bar-text">Intelligence&nbsp;<b>{{intelligence}}</b></span>
             </div>
           </div>
-          <div class="wisdom stat bar">
+          <div class="wisdom stat bar" :style="maxWis">
             <div class="current-stat" :style="wisSize">
               <span class="bar-text">Wisdom&nbsp;<b>{{wisdom}}</b></span>
             </div>
           </div>
-          <div class="charisma stat bar">
+          <div class="charisma stat bar" :style="maxCha">
             <div class="current-stat" :style="chaSize">
               <span class="bar-text">Charisma&nbsp;<b>{{charisma}}</b></span>
             </div>
@@ -64,20 +64,20 @@
       <div class="lower-bars">
 
         <div class="hit-points-bar">
-            <div class="current-stat" :style="hpSize">
-              <span class="bar-text"><b>HP</b>&nbsp;{{hitPointsCurrent}}/{{hitPointsMaximum}}</span>
-              <span class="add-or-subtract">
-                <i class="fas fa-plus-circle"></i>
-                <i class="fas fa-minus-circle"></i>
-              </span>
-            </div>
+          <span class="add-or-subtract">
+            <i class="fas fa-plus-circle btn" @click="healDamage(1)"></i>
+            <i class="fas fa-minus-circle btn" @click="takeDamage(1)"></i>
+          </span>
+          <div class="current-stat" :style="hpSize">
+            <span class="bar-text"><b>HP</b>&nbsp;{{hitPointsCurrent}}/{{hitPointsMaximum}}</span>
           </div>
+        </div>
 
-          <div class="experience-bar">
-            <div class="current-stat" :style="xpSize">
-              <span class="xp-bar-text"><b>XP</b>&nbsp;{{xpCurrent}}/{{xpGoalCurrent}}</span>
-            </div>
+        <div class="experience-bar">
+          <div class="current-stat" :style="xpSize">
+            <span class="xp-bar-text"><b>XP</b>&nbsp;{{xpCurrent}}/{{xpGoalCurrent}}</span>
           </div>
+        </div>
 
       </div>
 
@@ -102,15 +102,15 @@
     data: {
       characterName: 'Clarence Veluuthra',
       level: 11,
-      hitPointsCurrent: 54,
+      hitPointsCurrent: 38,
       hitPointsMaximum: 54,
-      xpTotal: 85000,
+      xpTotal: 98000,
       strength: 14,
       dexterity: 20,
       constitution: 12,
       intelligence: 15,
       wisdom: 10,
-      charisma: 8,
+      charisma:8,
       levelRequirements: {
         '1': 0,
         '2': 300,
@@ -172,8 +172,57 @@
         return this.levelRequirements[String(this.level)]
       },
       xpNextLevel: function () {
-        return this.levelRequirements[String(this.level+1)]
-      }
+        return this.levelRequirements[String(this.level + 1)]
+      },
+      // Max Stats
+      maxStr: function () {
+        if (this.strength >= 20) {
+          return { borderColor: '#42280059',
+          fontSize: '1.2rem',
+          backgroundColor: '#fad687'
+          }
+        }
+      },
+      maxDex: function () {
+        if (this.dexterity >= 20) {
+          return { borderColor: '#fad687',
+          fontSize: '1.2rem'
+          }
+        }
+      },
+      maxCon: function () {
+        if (this.constitution >= 20) {
+          return { borderColor: '#42280059',
+          fontSize: '1.2rem',
+          backgroundColor: '#fad687'
+          }
+        }
+      },
+      maxInt: function () {
+        if (this.intelligence >= 20) {
+          return { borderColor: '#42280059',
+          fontSize: '1.2rem',
+          backgroundColor: '#fad687'
+          }
+        }
+      },
+      maxWis: function () {
+        if (this.wisdom >= 20) {
+          return { borderColor: '#42280059',
+          fontSize: '1.2rem',
+          backgroundColor: '#fad687'
+          }
+        }
+      },
+      maxCha: function () {
+        if (this.charisma >= 20) {
+          return { borderColor: '#42280059',
+          fontSize: '1.2rem',
+          backgroundColor: '#fad687'
+          }
+        }
+      },
+      // -----
     },
 
     methods: {
@@ -206,7 +255,7 @@
     height: 100%;
     background-size: cover;
     background: #245080;
-    background: linear-gradient(to bottom, #4e6b8a 0%,#245080 52%)
+    background: linear-gradient(to bottom, #314255 0%,#415d7a 80%)
   }
 
   .sheet-container {
@@ -218,16 +267,35 @@
   .character-name {
     font-size: 1.5rem;
     color: whitesmoke;
+    text-shadow:
+      -1px -1px 0 #000,
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+      1px 1px 0 #000;
   }
 
   .btn {
+    position: relative;
+    user-select: none;
+    line-height: 35px;
+    margin-right: 5px;
+    z-index: 1;
+    color: whitesmoke;
+  }
 
+  .add-or-subtract {
+
+  }
+  
+  .add-or-subtract:hover {
+    cursor: pointer;
   }
 
 /* Top Container */
   .top-container {
     display: flex;
-    flex-direction: column
+    flex-direction: column;
+    user-select: none;
   }
 
   .image-main-stats {
@@ -245,9 +313,11 @@
     position: relative;
     width: 300px;
     height: 300px;
+    min-width: 300px;
+    min-height: 300px;
     margin: 20px 20px 20px 0;
-    background-color: #c7ab6f;
-    border: 8px double #42280059;
+    background-color: #fad687;
+    border: 10px double #42280059;
     border-radius: 100%;
     /* border-image-source: url(test-border.png);
     border-image-slice: 200;  */
@@ -257,12 +327,10 @@
     position: absolute;
     top: 0;
     left: 0;
-    display: grid;
     width: 300px;
     height: 300px;
     border-radius: 100%;
-    box-shadow: inset 0 0 30px #000000;
-    z-index: 999;
+    box-shadow: inset 0 0 30px #000;
   }
 
   .character-image img {
@@ -271,28 +339,28 @@
     border-radius: 100%;
   }
 
-  .hp-button {
-    align-self: center;
-    display: inline-block;
-    background-color: #4e6b8a;
-    width: 50%;
-    height: 10%;
-    margin: 10px;
-    border-radius: 10%;
-  }
-
   .bar {
     height: 35px;
     margin: 0 10px 10px 10px;
     background-color: #5f5f5f;
-    border: 1px solid whitesmoke;
+    border: 4px double whitesmoke;
   }
 
   .hit-points-bar {
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
     height: 35px;
     margin-bottom: 0;
     background-color: #5f5f5f;
     border: 1px solid whitesmoke;
+  }
+
+  .hit-points-bar .current-stat {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(to right, #1cc613 , #0e9255);
   }
 
   .experience-bar {
@@ -303,18 +371,16 @@
 
   .experience-bar .current-stat {
     background: linear-gradient(to right, #ff7300 , #ffee00);
-  }
-
-  .hit-points-bar .current-stat {
-    background: linear-gradient(to right, #1cc613 , #0e9255);
+    padding: 2px 0;
   }
 
   .stat .current-stat {
-    background: linear-gradient(to right, #7A2A90 , #31a3c5);
+    background: linear-gradient(to right, #402a90 , #31a3c5);
+    /* background: linear-gradient(to right, #7A2A90 , #31a3c5); */
   }
 
   .current-stat {
-    width: 90%;
+    width: 100%;
     height: 100%;
     color: whitesmoke;
   }
@@ -326,7 +392,9 @@
   }
 
   .xp-bar-text {
-    padding: 4px;
+    line-height: 20px;
+    padding-left: 4px;
+    font-size: 0.8rem;
   }
 
   .mid-container {
