--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
       <div class="image-main-stats">
 
         <div class="character-image">
-          <div class="character-image-border"></div>
+          <div class="character-image-border">
+            <div class="drink-potion btn" @click="drinkPotion">
+                <i class="fas fa-flask">  
+                <div class="potion-select" @mouseover="togglePotions()">
+                  <div v-if=showPotions class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                  </div>
+                </div>
+              </i>                
+            </div>
+          </div>
           <img src="ClarenceVeluuthra.png" alt="portrait image">
         </div>
 
@@ -94,6 +106,7 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+<script src="Dice Roller/DiceRoller.js"></script>
 
 <script>
 
@@ -132,7 +145,8 @@
         '18': 265000,
         '19': 305000,
         '20': 335000
-      }
+      },
+      showPotions: false
     },
 
     computed: {
@@ -226,11 +240,15 @@
     },
 
     methods: {
+      togglePotions: function () {
+        this.showPotions = !this.showPotions
+      },
       healDamage: function (value) {
         var newHp = this.hitPointsCurrent + value
         if (newHp <= this.hitPointsMaximum) {
           this.hitPointsCurrent = newHp
         } else {
+          this.hitPointsCurrent = this.hitPointsMaximum
           return console.log('too high')
         }
       },
@@ -239,7 +257,27 @@
         if (newHp >= 0) {
           this.hitPointsCurrent = newHp
         } else {
+          this.hitPointsCurrent = 0
           return console.log('too low')
+        }
+      },
+      drinkPotion: function (size) {
+        if (size === 'Greater') {
+          roll = rollDie('4d4+4')
+          this.healDamage(roll)
+          console.log(roll)
+        } else if (size === 'Superior') {
+          roll = rollDie('8d4+8')
+          this.healDamage(roll)
+          console.log(roll)
+        } else if (size === 'Supreme') {
+          roll = rollDie('10d4+20')
+          this.healDamage(roll)
+          console.log(roll)
+        } else {
+          roll = rollDie('2d4+2')
+          this.healDamage(roll)
+          console.log(roll)
         }
       }
     }
@@ -249,6 +287,45 @@
 <style lang="css">
 
 /* General */
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
 
   html {
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -275,20 +352,20 @@
   }
 
   .btn {
-    position: relative;
     user-select: none;
-    line-height: 35px;
-    margin-right: 5px;
     z-index: 1;
+    color: rgba(245, 245, 245, 0.404);
+  }
+
+  .btn:hover {
+    cursor: pointer;
     color: whitesmoke;
   }
 
-  .add-or-subtract {
-
-  }
-  
-  .add-or-subtract:hover {
-    cursor: pointer;
+  .add-or-subtract .btn {
+    position: relative;
+    line-height: 35px;
+    margin-right: 5px;
   }
 
 /* Top Container */
@@ -331,6 +408,15 @@
     height: 300px;
     border-radius: 100%;
     box-shadow: inset 0 0 30px #000;
+    /* For potions */
+    display: flex;
+    justify-content: flex-end;
+    color: whitesmoke;
+    font-size: 1.5rem;
+  }
+
+  .drink-potion {
+    align-self: flex-end;
   }
 
   .character-image img {
