--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 
         <div class="character-image">
           <div class="character-image-border">
-            <div class="drink-potion btn" @click="drinkPotion">
+            <div class="drink-potion btn" @click="toggleShowPotions()">
                 <i class="fas fa-flask">  
-                <div class="potion-select" @mouseover="togglePotions()">
+                <div class="potion-select">
                   <div v-if=showPotions class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a @click="drinkPotion">Lesser</a>
+                    <a @click="drinkPotion('Greater')">Greater</a>
+                    <a @click="drinkPotion('Superior')">Superior</a>
+                    <a @click="drinkPotion('Supreme')">Supreme</a>
                   </div>
                 </div>
               </i>                
@@ -240,7 +241,7 @@
     },
 
     methods: {
-      togglePotions: function () {
+      toggleShowPotions: function () {
         this.showPotions = !this.showPotions
       },
       healDamage: function (value) {
@@ -287,45 +288,6 @@
 <style lang="css">
 
 /* General */
-
-/* Dropdown Button */
-.dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-/* Dropdown button on hover & focus */
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
-
 
   html {
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -415,14 +377,35 @@
     font-size: 1.5rem;
   }
 
-  .drink-potion {
-    align-self: flex-end;
-  }
-
   .character-image img {
     width: 100%;
     height: 100%;
     border-radius: 100%;
+  }
+
+/* Select Potion */
+
+  .drink-potion {
+    align-self: flex-end;
+  }
+
+  .dropdown-content {
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  .dropdown-content a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #ddd
   }
 
   .bar {
