--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 
         <div class="character-image">
           <div class="character-image-border">
+            <div class="shield-container">
+              <div class="shield">
+                <div class="shield-text">{{armourClass}}</div>
+              </div>
+            </div>
             <div class="drink-potion btn" @click="toggleShowPotions()">
                 <i class="fas fa-flask">  
                 <div class="potion-select">
@@ -117,6 +122,7 @@
     data: {
       characterName: 'Clarence Veluuthra',
       level: 11,
+      armourClass: 23,
       hitPointsCurrent: 38,
       hitPointsMaximum: 54,
       xpTotal: 98000,
@@ -332,6 +338,7 @@
   }
 
 /* Top Container */
+
   .top-container {
     display: flex;
     flex-direction: column;
@@ -373,7 +380,8 @@
     box-shadow: inset 0 0 30px #000;
     /* For potions */
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    flex-direction: column-reverse;
     color: whitesmoke;
     font-size: 1.5rem;
   }
@@ -388,17 +396,18 @@
 
   .drink-potion {
     align-self: flex-end;
+    z-index: 2;
   }
 
   .dropdown-content {
+    border: 1px solid whitesmoke;
     display: flex;
-    margin-top: 3px;
+    margin-top: 5px;
     color: white;
     font-size: 1rem;
     position: absolute;
-    background-color:#245080ec;
-    box-shadow: 0px 8px 16px 0px #00000033;
-    z-index: 1;
+    background-color:#5f5f5f;
+    box-shadow: 8px 8px 16px 8px #00000033;
   }
 
   .dropdown-content a {
@@ -408,7 +417,7 @@
   }
 
   .dropdown-content a:hover {
-    background-color: #1d3f63;
+    background-color: #1d3f63a9;
   }
 
   .drink-lesser::after {
@@ -517,6 +526,35 @@
   .bot-container {
     display: flex;
   }
+
+/* AC Shield http://jsfiddle.net/seanmacentee/2v2wM/36/ */
+
+  .shield-container {
+    position: absolute;
+    width: 50px;
+    height: 70px;
+  }
+
+  .shield-text {
+    width: 100%;
+    line-height: 50px;
+    position: absolute;
+    text-align: center;
+    z-index: 2;
+  }
+
+  .shield {
+    box-shadow: inset 0 0 9999rem #5f5f5f;
+    border: 10px double #42280059;
+    position: absolute;
+    width: 100%;
+    height: 90%;
+    background-color: #fad687;
+    border-radius: 0 0 70% 70%;
+    display: inline-block;
+    z-index: 1;
+  }
+
 
 </style>
 
