edit shield css

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
     display: flex;
   }
 
-/* AC Shield http://jsfiddle.net/seanmacentee/2v2wM/36/ */
+/* AC Shield */
 
   .shield-container {
     position: absolute;
@@ -537,7 +537,7 @@
 
   .shield-text {
     width: 100%;
-    line-height: 50px;
+    line-height: 55px;
     position: absolute;
     text-align: center;
     z-index: 2;
@@ -550,7 +550,7 @@
     width: 100%;
     height: 90%;
     background-color: #fad687;
-    border-radius: 0 0 70% 70%;
+    border-radius: 0 0 45% 45%;
     display: inline-block;
     z-index: 1;
   }
