--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="image-main-stats">
 
         <div class="character-image">
-          <div class="character-image-border">
+          <div class="character-image-border":style="lowHp">
             <div class="shield-container">
               <div class="shield">
                 <div class="shield-text">{{armourClass}}</div>
@@ -158,7 +158,16 @@
       potRoll: 0
     },
     computed: {
+      lowHp: function () {
+        if (this.hitPointsCurrent <= 0) {
+          return {boxShadow: 'inset 0 0 100px #000'}
+        } else if ((this.hitPointsCurrent / this.hitPointsMaximum) <= 0.2) {
+          return {boxShadow: 'inset 0 0 70px red'}
+        }
+      },
+      
       // Caculating Bar Size
+
       hpSize: function () {
         return {width: String((this.hitPointsCurrent / this.hitPointsMaximum) * 100) + '%'}
       },
@@ -183,7 +192,9 @@
       chaSize: function () {
         return {width: String((this.charisma / 20) * 100) + '%'}
       },
+
       // -----
+
       xpCurrent: function () {
         return this.xpTotal - this.xpThisLevel
       },
@@ -196,7 +207,9 @@
       xpNextLevel: function () {
         return this.levelRequirements[String(this.level + 1)]
       },
+
       // Max Stats
+
       maxStr: function () {
         if (this.strength >= 20) {
           return { borderColor: '#42280059',
@@ -363,8 +376,8 @@
     min-width: 300px;
     min-height: 300px;
     margin: 20px 20px 20px 0;
-    background-color: #fad687;
-    border: 10px double #42280059;
+    background-color: #5f5f5f;
+    border: 9px double #fad687;
     border-radius: 100%;
     /* border-image-source: url(test-border.png);
     border-image-slice: 200;  */
@@ -417,7 +430,7 @@
   }
 
   .dropdown-content a:hover {
-    background-color: #1d3f63a9;
+    background-color: #1d3f635e;
   }
 
   .drink-lesser::after {
@@ -544,12 +557,11 @@
   }
 
   .shield {
-    box-shadow: inset 0 0 99999rem #5f5f5f;
-    border: 10px double #42280059;
+    border: 9px double #fad687;
     position: absolute;
     width: 100%;
     height: 90%;
-    background-color: #fad687;
+    background-color: #5f5f5f;
     border-radius: 0 0 45% 45%;
     display: inline-block;
     z-index: 1;
