--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     height: 100%;
     background-size: cover;
     background: #245080;
-    background: linear-gradient(to bottom, #314255 0%,#415d7a 80%)
+    background: linear-gradient(to bottom, #314255 0%,#415d7a 80%);
   }
 
   .sheet-container {
